# tower

./: .gitignore  README.md  pyproject.toml
.old_tower/skills/dmrg/detectors/: mpi.py  orca.py  vasp.py
.old_tower/skills/dmrg/hooks/: observe.py  refine.py  respond.py
.old_tower/src/tower/graph/: hooks.py
.old_tower/src/tower/runtime/: skill_loader.py
agents/gaussian/: __init__.py  agent.py  nodes.py  prompts.py
agents/hpc/: __init__.py  agent.py  nodes.py
agents/monitor/: __init__.py  agent.py
agents/orca/: __init__.py  agent.py
agents/pyscf/: __init__.py  agent.py  nodes.py
agents/supervisor/: __init__.py  agent.py  prompts.py
contracts/: pyproject.toml
contracts/src/contracts/: __init__.py  agent_task.py  gaussian_task.py  hpc_task.py  monitor_task.py  orca_task.py  pyscf_task.py
docs/superpowers/: 2026-06-15-phase-1-status.md
docs/superpowers/archive/: 2026-06-17-tower-refactor-plan.md
docs/superpowers/contracts/: agent_contract.md  tool_contract.md  workflow_contract.md
docs/superpowers/plans/: 2026-06-15-tower-phase-1-plan.md
docs/superpowers/specs/: 2026-06-15-tower-agent-design.md  2026-06-17-tower-multi-agent-design.md  2026-06-17-tower-refactor-design.md  2026-06-18-hpc-agent-redesign.md  2026-06-18-pyscf-agent-redesign.md
mcp_servers/hpc-mcp/: pyproject.toml
mcp_servers/hpc-mcp/src/hpc_mcp/: __init__.py  server.py
mcp_servers/infra-mcp/: pyproject.toml
mcp_servers/infra-mcp/src/infra_mcp/: __init__.py  server.py
prompts/hpc/: hpc_analyze.md  hpc_generate_slurm.md
prompts/pyscf/: pyscf_fix.md  pyscf_generate.md  pyscf_parse.md
skills/dmrg/: skill.yaml
skills/dmrg/detectors/: __init__.py  base.py  gaussian.py  python_error.py  scf.py
skills/dmrg/hooks/: __init__.py  act.py  plan.py
src/tower/: __init__.py  chat.py  cli.py  llm.py  main.py  state.py
src/tower/graph/: edges.py  nodes.py
src/tower/mcp/: __init__.py  client.py
src/tower/memory/: __init__.py  compiler.py  long_term.py  models.py  pool.py  retriever.py  short_term.py  working.py
src/tower/runtime/: orchestrator.py
src/tower/state/: __init__.py  artifact_registry.py  job_registry.py  run_store.py
src/tower/tools/: registry.py  safety.py
src/tower/tools/builtin/: bash.py  filesystem.py  web.py
tests/: conftest.py  test_filesystem_tools.py  test_safety.py  test_web_tools.py
tower_agent_kit/: pyproject.toml
tower_agent_kit/src/tower_agent_kit/: __init__.py  base.py
