[project]
name = "tower"
version = "0.1.0"
description = "A general-purpose agent framework with Plan→Act→Observe→Refine→Respond orchestration"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langgraph",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langchain",
    "langchain-deepseek",
    "python-dotenv",
    "click",
    "rich",
    "prompt-toolkit",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
]

[project.scripts]
tower = "tower.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
