[project]
name = "tower"
version = "0.2.0"
description = "Supervisor-led modular multi-agent system for computational chemistry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langchain",
    "langchain-deepseek",
    "python-dotenv",
    "click",
    "rich",
    "prompt-toolkit",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "tower-contracts",
    "tower-agent-kit",
]

[tool.uv.sources]
tower-contracts = { path = "contracts", editable = true }
tower-agent-kit = { path = "tower_agent_kit", editable = true }

[project.scripts]
tower = "tower.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true