[project]
name = "tower-hpc-mcp"
version = "0.1.0"
description = "Tower HPC MCP server — queue status, log parsing, job submission"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
